--- a/src/output.css
+++ b/src/output.css
@@ -7,7 +7,11 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-red-300: oklch(80.8% 0.114 19.571);
     --color-red-400: oklch(70.4% 0.191 22.216);
+    --color-red-500: oklch(63.7% 0.237 25.331);
+    --color-amber-200: oklch(92.4% 0.12 95.746);
+    --color-amber-300: oklch(87.9% 0.169 91.605);
     --color-white: #fff;
     --spacing: 0.25rem;
     --container-6xl: 72rem;
@@ -264,9 +268,6 @@
   .max-w-\[1600px\] {
     max-width: 1600px;
   }
-  .flex-1 {
-    flex: 1;
-  }
   .border-collapse {
     border-collapse: collapse;
   }
@@ -284,9 +285,6 @@
   }
   .items-center {
     align-items: center;
-  }
-  .justify-around {
-    justify-content: space-around;
   }
   .justify-between {
     justify-content: space-between;
@@ -341,9 +339,6 @@
   .px-9 {
     padding-inline: calc(var(--spacing) * 9);
   }
-  .px-54 {
-    padding-inline: calc(var(--spacing) * 54);
-  }
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
   }
@@ -396,6 +391,12 @@
     --tw-font-weight: var(--font-weight-semibold);
     font-weight: var(--font-weight-semibold);
   }
+  .text-red-300 {
+    color: var(--color-red-300);
+  }
+  .text-red-500 {
+    color: var(--color-red-500);
+  }
   .text-white {
     color: var(--color-white);
   }
@@ -440,16 +441,127 @@
       }
     }
   }
-  .focus-visible\:outline {
-    &:focus-visible {
-      outline-style: var(--tw-outline-style);
-      outline-width: 1px;
+  .\[\&\>article\]\:hover\:scale-95 {
+    &>article {
+      &:hover {
+        @media (hover: hover) {
+          --tw-scale-x: 95%;
+          --tw-scale-y: 95%;
+          --tw-scale-z: 95%;
+          scale: var(--tw-scale-x) var(--tw-scale-y);
+        }
+      }
     }
   }
-  .focus-visible\:outline-2 {
-    &:focus-visible {
-      outline-style: var(--tw-outline-style);
-      outline-width: 2px;
+  .\[\&\>article\]\:hover\:scale-105 {
+    &>article {
+      &:hover {
+        @media (hover: hover) {
+          --tw-scale-x: 105%;
+          --tw-scale-y: 105%;
+          --tw-scale-z: 105%;
+          scale: var(--tw-scale-x) var(--tw-scale-y);
+        }
+      }
+    }
+  }
+  .\[\&\>article\]\:hover\:cursor-pointer {
+    &>article {
+      &:hover {
+        @media (hover: hover) {
+          cursor: pointer;
+        }
+      }
+    }
+  }
+  .\[\&\>article\]\:hover\:bg-amber-200 {
+    &>article {
+      &:hover {
+        @media (hover: hover) {
+          background-color: var(--color-amber-200);
+        }
+      }
+    }
+  }
+  .\[\&\>article\]\:hover\:bg-amber-300 {
+    &>article {
+      &:hover {
+        @media (hover: hover) {
+          background-color: var(--color-amber-300);
+        }
+      }
+    }
+  }
+  .\[\&\>article\]\:hover\:text-red-400 {
+    &>article {
+      &:hover {
+        @media (hover: hover) {
+          color: var(--color-red-400);
+        }
+      }
+    }
+  }
+  .\[\&\>article\]\:hover\:underline {
+    &>article {
+      &:hover {
+        @media (hover: hover) {
+          text-decoration-line: underline;
+        }
+      }
+    }
+  }
+  .\[\&\>article\]\:hover\:transition-transform {
+    &>article {
+      &:hover {
+        @media (hover: hover) {
+          transition-property: transform, translate, scale, rotate;
+          transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+          transition-duration: var(--tw-duration, var(--default-transition-duration));
+        }
+      }
+    }
+  }
+  .\[\&\>li\>a\]\:underline {
+    &>li>a {
+      text-decoration-line: underline;
+    }
+  }
+  .\[\&\>li\>a\]\:hover\:text-red-400 {
+    &>li>a {
+      &:hover {
+        @media (hover: hover) {
+          color: var(--color-red-400);
+        }
+      }
+    }
+  }
+  .\[\&\>li\>a\]\:hover\:text-red-500 {
+    &>li>a {
+      &:hover {
+        @media (hover: hover) {
+          color: var(--color-red-500);
+        }
+      }
+    }
+  }
+  .\[\&\>li\>a\]\:hover\:underline {
+    &>li>a {
+      &:hover {
+        @media (hover: hover) {
+          text-decoration-line: underline;
+        }
+      }
+    }
+  }
+  .\[\&\>li\>a\]\:hover\:transition-all {
+    &>li>a {
+      &:hover {
+        @media (hover: hover) {
+          transition-property: all;
+          transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+          transition-duration: var(--tw-duration, var(--default-transition-duration));
+        }
+      }
     }
   }
 }
