--- a/src/output.css
+++ b/src/output.css
@@ -12,6 +12,7 @@
     --color-red-500: oklch(63.7% 0.237 25.331);
     --color-amber-200: oklch(92.4% 0.12 95.746);
     --color-amber-300: oklch(87.9% 0.169 91.605);
+    --color-gray-300: oklch(87.2% 0.01 258.338);
     --color-white: #fff;
     --spacing: 0.25rem;
     --container-6xl: 72rem;
@@ -202,6 +203,9 @@
   .my-50 {
     margin-block: calc(var(--spacing) * 50);
   }
+  .mt-4 {
+    margin-top: calc(var(--spacing) * 4);
+  }
   .mt-5 {
     margin-top: calc(var(--spacing) * 5);
   }
@@ -271,6 +275,9 @@
   .border-collapse {
     border-collapse: collapse;
   }
+  .transform {
+    transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
+  }
   .cursor-default {
     cursor: default;
   }
@@ -292,6 +299,9 @@
   .justify-center {
     justify-content: center;
   }
+  .gap-4 {
+    gap: calc(var(--spacing) * 4);
+  }
   .gap-6 {
     gap: calc(var(--spacing) * 6);
   }
@@ -305,6 +315,9 @@
   .overflow-hidden {
     overflow: hidden;
   }
+  .rounded {
+    border-radius: 0.25rem;
+  }
   .rounded-2xl {
     border-radius: var(--radius-2xl);
   }
@@ -317,6 +330,9 @@
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
+  }
+  .bg-gray-300 {
+    background-color: var(--color-gray-300);
   }
   .bg-red-400 {
     background-color: var(--color-red-400);
@@ -336,8 +352,14 @@
   .object-cover {
     object-fit: cover;
   }
+  .px-4 {
+    padding-inline: calc(var(--spacing) * 4);
+  }
   .px-9 {
     padding-inline: calc(var(--spacing) * 9);
+  }
+  .py-2 {
+    padding-block: calc(var(--spacing) * 2);
   }
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
@@ -391,12 +413,6 @@
     --tw-font-weight: var(--font-weight-semibold);
     font-weight: var(--font-weight-semibold);
   }
-  .text-red-300 {
-    color: var(--color-red-300);
-  }
-  .text-red-500 {
-    color: var(--color-red-500);
-  }
   .text-white {
     color: var(--color-white);
   }
@@ -424,6 +440,10 @@
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
     transition-duration: var(--tw-duration, var(--default-transition-duration));
   }
+  .duration-300 {
+    --tw-duration: 300ms;
+    transition-duration: 300ms;
+  }
   .hover\:scale-105 {
     &:hover {
       @media (hover: hover) {
@@ -431,13 +451,6 @@
         --tw-scale-y: 105%;
         --tw-scale-z: 105%;
         scale: var(--tw-scale-x) var(--tw-scale-y);
-      }
-    }
-  }
-  .hover\:underline {
-    &:hover {
-      @media (hover: hover) {
-        text-decoration-line: underline;
       }
     }
   }
@@ -453,18 +466,6 @@
       }
     }
   }
-  .\[\&\>article\]\:hover\:scale-105 {
-    &>article {
-      &:hover {
-        @media (hover: hover) {
-          --tw-scale-x: 105%;
-          --tw-scale-y: 105%;
-          --tw-scale-z: 105%;
-          scale: var(--tw-scale-x) var(--tw-scale-y);
-        }
-      }
-    }
-  }
   .\[\&\>article\]\:hover\:cursor-pointer {
     &>article {
       &:hover {
@@ -474,38 +475,11 @@
       }
     }
   }
-  .\[\&\>article\]\:hover\:bg-amber-200 {
-    &>article {
-      &:hover {
-        @media (hover: hover) {
-          background-color: var(--color-amber-200);
-        }
-      }
-    }
-  }
-  .\[\&\>article\]\:hover\:bg-amber-300 {
-    &>article {
-      &:hover {
-        @media (hover: hover) {
-          background-color: var(--color-amber-300);
-        }
-      }
-    }
-  }
   .\[\&\>article\]\:hover\:text-red-400 {
     &>article {
       &:hover {
         @media (hover: hover) {
           color: var(--color-red-400);
-        }
-      }
-    }
-  }
-  .\[\&\>article\]\:hover\:underline {
-    &>article {
-      &:hover {
-        @media (hover: hover) {
-          text-decoration-line: underline;
         }
       }
     }
@@ -521,34 +495,11 @@
       }
     }
   }
-  .\[\&\>li\>a\]\:underline {
-    &>li>a {
-      text-decoration-line: underline;
-    }
-  }
   .\[\&\>li\>a\]\:hover\:text-red-400 {
     &>li>a {
       &:hover {
         @media (hover: hover) {
           color: var(--color-red-400);
-        }
-      }
-    }
-  }
-  .\[\&\>li\>a\]\:hover\:text-red-500 {
-    &>li>a {
-      &:hover {
-        @media (hover: hover) {
-          color: var(--color-red-500);
-        }
-      }
-    }
-  }
-  .\[\&\>li\>a\]\:hover\:underline {
-    &>li>a {
-      &:hover {
-        @media (hover: hover) {
-          text-decoration-line: underline;
         }
       }
     }
@@ -564,6 +515,26 @@
       }
     }
   }
+}
+@property --tw-rotate-x {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-rotate-y {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-rotate-z {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-skew-x {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-skew-y {
+  syntax: "*";
+  inherits: false;
 }
 @property --tw-space-x-reverse {
   syntax: "*";
@@ -649,6 +620,10 @@
   inherits: false;
   initial-value: solid;
 }
+@property --tw-duration {
+  syntax: "*";
+  inherits: false;
+}
 @property --tw-scale-x {
   syntax: "*";
   inherits: false;
@@ -667,6 +642,11 @@
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
+      --tw-rotate-x: initial;
+      --tw-rotate-y: initial;
+      --tw-rotate-z: initial;
+      --tw-skew-x: initial;
+      --tw-skew-y: initial;
       --tw-space-x-reverse: 0;
       --tw-border-style: solid;
       --tw-font-weight: initial;
@@ -685,6 +665,7 @@
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
       --tw-outline-style: solid;
+      --tw-duration: initial;
       --tw-scale-x: 1;
       --tw-scale-y: 1;
       --tw-scale-z: 1;
