--- a/src/output.css
+++ b/src/output.css
@@ -33,7 +33,6 @@
     --font-weight-medium: 500;
     --font-weight-semibold: 600;
     --font-weight-bold: 700;
-    --font-weight-extrabold: 800;
     --radius-sm: 0.25rem;
     --radius-lg: 0.5rem;
     --radius-xl: 0.75rem;
@@ -274,6 +273,9 @@
   .w-32 {
     width: calc(var(--spacing) * 32);
   }
+  .w-48 {
+    width: calc(var(--spacing) * 48);
+  }
   .w-\[262px\] {
     width: 262px;
   }
@@ -384,9 +386,6 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
-  .bg-amber-300 {
-    background-color: var(--color-amber-300);
-  }
   .bg-gray-300 {
     background-color: var(--color-gray-300);
   }
@@ -458,9 +457,6 @@
   }
   .text-left {
     text-align: left;
-  }
-  .align-middle {
-    vertical-align: middle;
   }
   .text-4xl {
     font-size: var(--text-4xl);
@@ -625,157 +621,11 @@
       }
     }
   }
-  .\[\&\>div\]\:hover\:border-1 {
-    &>div {
-      &:hover {
-        @media (hover: hover) {
-          border-style: var(--tw-border-style);
-          border-width: 1px;
-        }
-      }
-    }
-  }
-  .\[\&\>div\]\:hover\:border-2 {
-    &>div {
-      &:hover {
-        @media (hover: hover) {
-          border-style: var(--tw-border-style);
-          border-width: 2px;
-        }
-      }
-    }
-  }
-  .\[\&\>div\]\:hover\:border-red-400 {
-    &>div {
-      &:hover {
-        @media (hover: hover) {
-          border-color: var(--color-red-400);
-        }
-      }
-    }
-  }
-  .\[\&\>div\]\:hover\:bg-amber-300 {
-    &>div {
-      &:hover {
-        @media (hover: hover) {
-          background-color: var(--color-amber-300);
-        }
-      }
-    }
-  }
-  .\[\&\>div\]\:hover\:bg-black {
-    &>div {
-      &:hover {
-        @media (hover: hover) {
-          background-color: var(--color-black);
-        }
-      }
-    }
-  }
-  .\[\&\>div\]\:hover\:bg-gray-100 {
-    &>div {
-      &:hover {
-        @media (hover: hover) {
-          background-color: var(--color-gray-100);
-        }
-      }
-    }
-  }
-  .\[\&\>div\]\:hover\:bg-gray-300 {
-    &>div {
-      &:hover {
-        @media (hover: hover) {
-          background-color: var(--color-gray-300);
-        }
-      }
-    }
-  }
-  .\[\&\>div\]\:hover\:bg-gray-400 {
-    &>div {
-      &:hover {
-        @media (hover: hover) {
-          background-color: var(--color-gray-400);
-        }
-      }
-    }
-  }
   .\[\&\>div\]\:hover\:bg-red-200 {
     &>div {
       &:hover {
         @media (hover: hover) {
           background-color: var(--color-red-200);
-        }
-      }
-    }
-  }
-  .\[\&\>div\]\:hover\:bg-red-300 {
-    &>div {
-      &:hover {
-        @media (hover: hover) {
-          background-color: var(--color-red-300);
-        }
-      }
-    }
-  }
-  .\[\&\>div\]\:hover\:text-red-400 {
-    &>div {
-      &:hover {
-        @media (hover: hover) {
-          color: var(--color-red-400);
-        }
-      }
-    }
-  }
-  .\[\&\>div\]\:hover\:opacity-70 {
-    &>div {
-      &:hover {
-        @media (hover: hover) {
-          opacity: 70%;
-        }
-      }
-    }
-  }
-  .\[\&\>div\]\:hover\:opacity-90 {
-    &>div {
-      &:hover {
-        @media (hover: hover) {
-          opacity: 90%;
-        }
-      }
-    }
-  }
-  .\[\&\>div\]\:hover\:opacity-95 {
-    &>div {
-      &:hover {
-        @media (hover: hover) {
-          opacity: 95%;
-        }
-      }
-    }
-  }
-  .\[\&\>div\]\:hover\:opacity-110 {
-    &>div {
-      &:hover {
-        @media (hover: hover) {
-          opacity: 110%;
-        }
-      }
-    }
-  }
-  .\[\&\>div\]\:hover\:bg-blend-color-burn {
-    &>div {
-      &:hover {
-        @media (hover: hover) {
-          background-blend-mode: color-burn;
-        }
-      }
-    }
-  }
-  .\[\&\>div\]\:hover\:bg-blend-darken {
-    &>div {
-      &:hover {
-        @media (hover: hover) {
-          background-blend-mode: darken;
         }
       }
     }
