--- a/src/output.css
+++ b/src/output.css
@@ -221,6 +221,9 @@
   .mt-9 {
     margin-top: calc(var(--spacing) * 9);
   }
+  .mt-36 {
+    margin-top: calc(var(--spacing) * 36);
+  }
   .mr-2 {
     margin-right: calc(var(--spacing) * 2);
   }
@@ -376,6 +379,14 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
+  .border-1 {
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+  }
+  .border-2 {
+    border-style: var(--tw-border-style);
+    border-width: 2px;
+  }
   .bg-gray-300 {
     background-color: var(--color-gray-300);
   }
@@ -405,9 +416,6 @@
   }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
-  }
-  .px-8 {
-    padding-inline: calc(var(--spacing) * 8);
   }
   .px-9 {
     padding-inline: calc(var(--spacing) * 9);
@@ -450,6 +458,9 @@
   }
   .text-left {
     text-align: left;
+  }
+  .align-top {
+    vertical-align: top;
   }
   .text-4xl {
     font-size: var(--text-4xl);
@@ -654,14 +665,43 @@
       }
     }
   }
-  .\[\&\>p\]\:px-4 {
+  .\[\&\>p\]\:mb-5 {
     &>p {
-      padding-inline: calc(var(--spacing) * 4);
+      margin-bottom: calc(var(--spacing) * 5);
     }
   }
   .\[\&\>p\]\:pr-4 {
     &>p {
       padding-right: calc(var(--spacing) * 4);
+    }
+  }
+  .\[\&\>p\]\:hover\:cursor-pointer {
+    &>p {
+      &:hover {
+        @media (hover: hover) {
+          cursor: pointer;
+        }
+      }
+    }
+  }
+  .\[\&\>p\]\:hover\:text-red-400 {
+    &>p {
+      &:hover {
+        @media (hover: hover) {
+          color: var(--color-red-400);
+        }
+      }
+    }
+  }
+  .\[\&\>p\]\:hover\:transition-all {
+    &>p {
+      &:hover {
+        @media (hover: hover) {
+          transition-property: all;
+          transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+          transition-duration: var(--tw-duration, var(--default-transition-duration));
+        }
+      }
     }
   }
 }
